--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <script src="script.js"></script>
 </head>
-<body>
+<body></body>
     <script>
     </script>
 </body>
