Added HTML to outline game

--- a/index.html
+++ b/index.html
@@ -4,10 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
 </head>
-<body></body>
-    <script>
-    </script>
+<body>
+    <div id="main-container">
+        <div id="icons">
+            <div id="player-side">
+                <img src="" id="player-icon">
+                <img src="" id="player-option">
+            </div>
+            
+            <div id="computer-side">
+                <img src="" id="computer-icon">
+                <img src="" id="computer-choice">
+            </div>
+        </div>
+
+        <div id="rps-buttons">
+            <button id="rock">Rock</button>
+            <button id="paper">Paper</button>
+            <button id="scissors">Scissors</button>
+        </div>
+
+        <h3 id="scoreboard"></h3>
+    </div>
+        
+    </div>
 </body>
 </html>
